# sudoku

./: .bandit  .flake8  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Makefile  README.md  README.rst  pyproject.toml  solve.py
sudoku/: game.py  grid.py
tests/: test_grid.py
