[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = ""
authors = ["Matt Pladna <pladdypants@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "~=5.3"
safety = "~=1.9.0"
sphinx = "~=3.0.4"
pytest-cov = "~=2.9"
codecov = "~=2.1.4"
pre-commit = "^2.19.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
